<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0077CC"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvWelcome"
        android:text="@string/bemVindo"
        android:textSize="28sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:text="@string/subtitulo"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_marginBottom="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnEnter"
        android:text="@string/entrar"
        android:textColor="#0077CC"
        android:backgroundTint="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>